# Bag-of-Tricks

./: .gitignore  Makefile  README.md  index.html  install.sh  justfile  pyproject.toml  requirements-dev.txt  slopspeare.txt
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  release.yml
alibi/: README.md  SKILL.md  alibi.py  test_alibi.py  test_llm_backend.py
alibi/.claude-plugin/: plugin.json
assets/: generate.py
bluff/: README.md  SKILL.md  bluff.py  test_bluff.py
bluff/.claude-plugin/: plugin.json
combo/: README.md  SKILL.md  combo.py  test_combo.py
combo/.claude-plugin/: plugin.json
deadpan/: README.md  SKILL.md  deadpan.py  test_deadpan.py
deadpan/.claude-plugin/: plugin.json
fold/: README.md  SKILL.md  fold.py  test_fold.py
fold/.claude-plugin/: plugin.json
frisk/: README.md  SKILL.md  frisk.py  test_frisk.py
frisk/.claude-plugin/: plugin.json
grill/: README.md  SKILL.md  grill.py  test_grill.py
grill/.claude-plugin/: plugin.json
interrobang/: README.md  SKILL.md  interrobang.py  test_interrobang.py
interrobang/.claude-plugin/: plugin.json
launder/: README.md  SKILL.md  launder.py  test_launder.py
launder/.claude-plugin/: plugin.json
lineup/: README.md  SKILL.md  lineup.py  test_lineup.py
lineup/.claude-plugin/: plugin.json
mole/: README.md  SKILL.md  mole.py  test_mole.py
mole/.claude-plugin/: plugin.json
mugshot/: README.md  SKILL.md  mugshot.py  test_mugshot.py
mugshot/.claude-plugin/: plugin.json
salvage/: README.md  SKILL.md  salvage.py  test_salvage.py
salvage/.claude-plugin/: plugin.json
snitch/: README.md  SKILL.md  snitch.py  test_snitch.py
snitch/.claude-plugin/: plugin.json
squeeze/: README.md  SKILL.md  squeeze.py  test_squeeze.py
squeeze/.claude-plugin/: plugin.json
steno/: README.md  SKILL.md  steno.py  test_steno.py
steno/.claude-plugin/: plugin.json
strawman/: README.md  SKILL.md  strawman.py  test_strawman.py
strawman/.claude-plugin/: plugin.json
studio/: README.md  index.html  server.py  shot.py
studio/examples/: ask-a-model.md  clean-then-score.md  fan-out-audit.md  gate-on-secrets.md  redact-inside-json.md
tell/: README.md  SKILL.md  tell.py  test_tell.py
tell/.claude-plugin/: plugin.json
tollbooth/: README.md  SKILL.md  test_tollbooth.py  tollbooth.py
tollbooth/.claude-plugin/: plugin.json
